fix: 调整 custom-loading 样式，增加 z-index 属性以确保层级优先级。

--- a/alinesno-infra-smart-im-ui/src/assets/styles/screen-chat.scss
+++ b/alinesno-infra-smart-im-ui/src/assets/styles/screen-chat.scss
@@ -40,6 +40,7 @@
 
 // 自定义样式
 .custom-loading {
+    z-index: 3000 !important;
     .el-loading-text {
         font-size: 3rem !important;
         color: #333 !important;
